--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,19 @@
+pluginManagement {
+  repositories {
+    maven { url "https://maven.aliyun.com/repository/central" }
+    maven { url "https://maven.aliyun.com/repository/public" }
+    maven { url "https://maven.aliyun.com/repository/google" }
+    maven { url "https://maven.aliyun.com/repository/grails-core" }
+    maven { url "https://maven.aliyun.com/repository/spring" }
+    maven { url "https://maven.aliyun.com/repository/spring-plugin" }
+    maven { url "https://maven.aliyun.com/repository/apache-snapshots" }
+    gradlePluginPortal()
+    maven { url 'https://repo.spring.io/plugins-release' }
+  }
+}
+
 plugins {
-  id "com.gradle.enterprise" version "3.6.2"
+  id "com.gradle.enterprise" version "3.4.1"
 }
 
 includeBuild "build-conventions"
