--- a/build-tools-internal/build.gradle
+++ b/build-tools-internal/build.gradle
@@ -197,8 +197,16 @@ tasks.named('licenseHeaders').configure {
  *****************************************************************************/
 
 repositories {
-  mavenCentral()
+  maven { url "https://maven.aliyun.com/repository/central" }
+  maven { url "https://maven.aliyun.com/repository/public" }
+  maven { url "https://maven.aliyun.com/repository/google" }
+  maven { url "https://maven.aliyun.com/repository/grails-core" }
+  maven { url "https://maven.aliyun.com/repository/spring" }
+  maven { url "https://maven.aliyun.com/repository/spring-plugin" }
+  maven { url "https://maven.aliyun.com/repository/apache-snapshots" }
+  maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
   gradlePluginPortal()
+  maven { url 'https://repo.spring.io/plugins-release' }
 }
 
 configurations {
