--- a/build-tools/build.gradle
+++ b/build-tools/build.gradle
@@ -97,8 +97,16 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
-    gradlePluginPortal()
+  maven { url "https://maven.aliyun.com/repository/central" }
+  maven { url "https://maven.aliyun.com/repository/public" }
+  maven { url "https://maven.aliyun.com/repository/google" }
+  maven { url "https://maven.aliyun.com/repository/grails-core" }
+  maven { url "https://maven.aliyun.com/repository/spring" }
+  maven { url "https://maven.aliyun.com/repository/spring-plugin" }
+  maven { url "https://maven.aliyun.com/repository/apache-snapshots" }
+  maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
+  gradlePluginPortal()
+  maven { url 'https://repo.spring.io/plugins-release' }
 }
 
 dependencies {
