--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ pluginManagement {
     maven { url "https://maven.aliyun.com/repository/spring" }
     maven { url "https://maven.aliyun.com/repository/spring-plugin" }
     maven { url "https://maven.aliyun.com/repository/apache-snapshots" }
+    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
     gradlePluginPortal()
     maven { url 'https://repo.spring.io/plugins-release' }
   }
