--- a/settings.gradle
+++ b/settings.gradle
@@ -7,9 +7,12 @@ pluginManagement {
     maven { url "https://maven.aliyun.com/repository/spring" }
     maven { url "https://maven.aliyun.com/repository/spring-plugin" }
     maven { url "https://maven.aliyun.com/repository/apache-snapshots" }
+    maven { url "https://maven.aliyun.com/repository/grails-core" }
     maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
-    gradlePluginPortal()
+    maven { url "https://mvnrepository.com/" }
     maven { url 'https://repo.spring.io/plugins-release' }
+    mavenCentral()
+    gradlePluginPortal()
   }
 }
 
